# bayesian-pipelines-pixels

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
MagicBeans/code/: Thresher.py  dp_params.py  galaxy_hyperprior.py  galaxy_hyperprior_DP.py  galaxy_prior.py  latent_classes.py  runner.py  shear_model.py
MagicBeans/parameters/: thresher_params_toymodel.ini
bpp/: __init__.py  catalog.py  cutouts.py  galaxy.py  psf.py  scene.py  shear_inference.py  utils.py
notebooks/: bliss_demo.ipynb  demo.ipynb  demo_descwl_sims.ipynb
tests/: test_draw.py
