[project]
authors = [
  {name = "Ismael Mendoza", email = "imendoza@umich.edu"},
  {name = "Michael Schneider"},
  {name = "Bob Armstrong"},
  {name = "Biswajit Biswas"},
  {name = "Francois Lanusse"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = ["galsim>=2.3.4", "numpy>=1.22.0", "astropy>=5.0.4"]
dynamic = ["version", "description"]
keywords = ["bayesian", "shear", "inference", "lsst"]
license = {file = "LICENSE"}
name = "bayes_pipelines_pixels"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["ipython>=8.3.0", "black>=22.3.0", "flake8>=4.0.1", "jupyter>=1.0.0", "notebook>=6.4.11", "matplotlib>=3.5.2", "isort >= 5.10.1"]
test = ["pytest >=7.1.2"]

[project.urls]
Home = "https://github.com/LSSTDESC/bayesian-pipelines-pixels"

[tool.flit.sdist]
include = ["bpp/"]

[tool.flit.module]
name = "bpp"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.pytest.ini_options]
addopts = "-ra"
minversion = "7.0.0"
testpaths = [
  "tests",
]

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"
