[tool.poetry]
authors = [
  "Ismael Mendoza",
  "Michael Schneider",
  "Bob Armstrong",
  "Biswajit Biswas",
  "Axel Guinot",
  "Francois Lanusse",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
description = "Bayesian inference of lensing shear directly from pixels."
keywords = ["bayesian", "shear", "inference", "lsst"]
license = "MIT"
name = "bayes_pipelines_pixels"
packages = [{include = "bpp"}]
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
astropy = ">=5.0.4"
galsim = ">=2.4.5"
numpy = ">=1.22.0"
python = ">=3.8,<4.0"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
flake8 = ">=4.0.1"
ipython = ">=8.3.0"
isort = ">=5.10.1"
jupyter = ">=1.0.0"
matplotlib = ">=3.5.2"
notebook = ">=6.4.11"
pylint = ">=2.14.0"
pytest = ">=7.1.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LSSTDESC/bayesian-pipelines-pixels/issues"
Home = "https://github.com/LSSTDESC/bayesian-pipelines-pixels"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-ra"
minversion = "7.0.0"
testpaths = [
  "tests",
]

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
  "C0114", # importing numpy, galsim throw this error 
  "C0103", # ra, g1, g2 throw this error but are good names
  "R0913", # sometimes this is OK, as long as function still does one thing.
  "R0914", # same as above.
]
max-line-length = "88"
